--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "db:seed": "node src/database/seeders.js",
+    "db:reset": "node src/database/seeders.js"
   },
   "repository": {
     "type": "git",
